src/test/resources/semantic/custom/reject/whileStatementStringType.ul
void main() {
}

void foo() {
    string condition;

    while (condition) {
    }
}
